Corrected contrast + identified language
Fixed low contrast areas in the h3 and h4 tags and added a previously absent lang attribute to the html tag.

--- a/style.css
+++ b/style.css
@@ -26,13 +26,13 @@ h1 {
 }
 
 h3 {
-  color: #efb9ab;
+  color: #fc8e6d;
   font-family: 'RocknRoll One', sans-serif;
   text-align: center;
 }
 
 h4 {
-  color: #efb9ab;
+  color: #FC8E6D;
   font-family: 'RocknRoll One', sans-serif;
 }
 
